--- a/scss/adviceGen.scss
+++ b/scss/adviceGen.scss
@@ -45,7 +45,7 @@ html, body {
                     min-block-size: 3rem;
                     border: solid red 2px;
                 }
-                .advice {
+                #advice {
                     color: #c0d4db;
                     padding: 0 3rem;
                     border: solid red 2px;
@@ -100,7 +100,7 @@ html, body {
                         min-block-size: 3rem;
                         border: solid red 2px;
                     }
-                    .advice {
+                    #advice {
                         color: #c0d4db;
                         padding: 0 3rem;
                         border: solid red 2px;
